--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,7 @@ body {
   margin: auto; }
 
 .about-button {
-  margin-top: 4rem;
+  margin-top: -2rem;
   width: 25rem;
   margin-right: -0.5rem; }
 
@@ -962,5 +962,319 @@ input, textarea {
       background-image: url("../img/phase4.png");
       background-repeat: no-repeat;
       background-size: 88px 89px; } } }
+@media screen and (min-width: 75rem) {
+  /*--------------------------------------------HEADER-------------------------------------------------------*/
+  .header {
+    background-image: url("../img/header_back_big_screen.jpg"); }
+
+  .gamburger__image {
+    display: none; }
+
+  .gamburger {
+    padding: 0; }
+
+  .gamburger__container {
+    width: 100%;
+    display: block;
+    text-align: center;
+    margin: 0;
+    padding: 0; }
+
+  .gamburger__item:last-child {
+    border: none;
+    margin-right: 0; }
+
+  .gamburger__item {
+    background: none;
+    display: inline-block;
+    border: none;
+    padding-top: 0.5rem;
+    margin-top: 2rem;
+    margin-right: 3rem;
+    height: 2rem;
+    width: 7rem;
+    border-radius: 15px;
+    box-sizing: border-box; }
+
+  .gamburger__link {
+    font-size: 1rem;
+    display: block; }
+
+  .gamburger__item:hover {
+    background: #249612;
+    transition: all 0.4s ease;
+    opacity: 0.9; }
+
+  .moon {
+    animation-duration: 16s;
+    transform-origin: 0 80%;
+    margin-top: 30rem; }
+
+  .clever-words {
+    margin-top: 24rem;
+    font-size: 2rem;
+    padding-left: 2rem;
+    display: inline-block; }
+
+  .header-button, .about-button, .contact-form__submit {
+    width: 10rem;
+    height: 3rem;
+    font-size: 1rem;
+    padding-top: 1rem;
+    box-shadow: 2px -2px 3px 2px #2fba1a;
+    margin-top: 10rem; }
+
+  .star {
+    height: 6rem;
+    width: 6rem;
+    left: 56%;
+    top: 43%; }
+
+  .star2 {
+    height: 5rem;
+    width: 5rem;
+    left: 15%;
+    top: 18%; }
+
+  .star3 {
+    left: 75%;
+    top: 27%; }
+
+  /*-----------------------------------------------ABOUT-----------------------------------------------------*/
+  .about {
+    background-image: url("../img/gold_big_screen.jpg"); }
+
+  .about-content__foto {
+    height: 12rem;
+    width: 12rem;
+    margin-top: 3rem; }
+
+  .about-content__header, .works-content__header, .window-content__header, .contacts-container__top-header {
+    font-size: 3rem;
+    width: 12rem;
+    margin: auto;
+    margin-top: 6rem;
+    left: 10rem; }
+
+  .about-content__hi-message {
+    margin-top: 2rem;
+    font-size: 2rem;
+    margin-bottom: 3rem; }
+
+  .about-content__text {
+    font-size: 1.5rem;
+    font-family: "Droid";
+    display: block;
+    width: 60%;
+    margin: auto;
+    padding: 2rem 1rem;
+    box-sizing: border-box; }
+
+  .about-content__line {
+    height: 1px;
+    background: #5f6b22;
+    width: 50%;
+    margin: auto; }
+
+  .about-button {
+    margin: auto;
+    margin-top: 5rem;
+    padding-top: 0.5rem;
+    box-shadow: 2px -2px 3px 2px #2fba1a; }
+
+  /*------------------------------------------------Works----------------------------------------------------*/
+  .works {
+    background-image: url("../img/road_big_screen.jpg"); }
+
+  .works-content__header {
+    display: block;
+    width: 12rem;
+    position: static;
+    margin: 2rem auto;
+    margin-bottom: 6rem; }
+
+  .pop-btn, .pop-btn_2, .pop-btn_3, .pop-btn_4, .pop-btn_5, .pop-btn_6 {
+    width: 25rem;
+    height: 25rem;
+    margin: auto;
+    box-shadow: 0.25rem 0.25rem 0.5rem 0.25rem #3fa13f; }
+
+  .pop-up__picture {
+    width: 30%; }
+
+  .pop-up-container {
+    display: inline-block;
+    margin-right: 10rem;
+    margin-bottom: 8rem; }
+
+  .pop-up-container:first-of-type, .pop-up-container:nth-of-type(4) {
+    margin-left: 9rem; }
+
+  .lbl-inside {
+    border-radius: 50%;
+    height: 8rem;
+    width: 8rem;
+    padding-top: 2rem;
+    position: absolute;
+    right: 2%;
+    top: -30%;
+    border: 3px solid #15ab24;
+    box-shadow: inset 0px 0px 10px 5px #3fa13f; }
+
+  /*------------------------------------------------SKILLS--------------------------------------------------------*/
+  .window-content__header {
+    margin-top: 0;
+    display: block;
+    width: 12rem;
+    position: static;
+    margin: auto; }
+
+  .window-content__background {
+    background-image: url("../img/about_big_screen.jpg");
+    background-attachment: fixed;
+    width: 100%;
+    height: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    left: 0;
+    top: 0;
+    z-index: 1; }
+
+  .window-content__skill-item {
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+    background-image: url("../img/round_diags.jpg");
+    background-position: -1% 97%;
+    background-size: 450px 450px;
+    margin-right: 8rem;
+    margin-top: 5rem; }
+
+  .window-content__skill-item-name {
+    margin-top: 8rem;
+    font-family: "Droid";
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-transform: uppercase; }
+
+  .window-content__upper {
+    height: auto;
+    margin-bottom: 30rem; }
+
+  .window-content__bottom {
+    height: auto; }
+
+  .window-content__middle {
+    height: auto; }
+
+  .third {
+    margin-left: -1rem; }
+
+  .sixth {
+    margin-left: -1rem; }
+
+  .fourth {
+    margin-left: -1rem; }
+
+  .window-content__skill-item_first {
+    background-position: 33% 97%; }
+
+  .window-content__skill-item_third, .window-content__skill-item_fifth {
+    background-position: 67% 2%; }
+
+  .window-content__skill-item_fourth {
+    background-position: 101% 50%; }
+
+  /*-----------------------------------------------------CONTACTS--------------------------------------------------------------*/
+  .contacts-container__top-header {
+    margin-top: 5rem;
+    display: block;
+    width: 12rem;
+    position: static;
+    margin: auto; }
+
+  .contact-form__username, .contact-form__usermail {
+    height: 3rem;
+    font-size: 1.2rem; }
+
+  .contact-form__message {
+    height: 12rem;
+    font-size: 1.5rem; }
+
+  .contacts-container__align {
+    box-sizing: border-box;
+    padding-top: 2rem; }
+
+  .contact-form__submit {
+    width: 10rem;
+    height: 3rem;
+    font-size: 1rem;
+    padding-top: 0.2rem;
+    box-shadow: 2px -2px 3px 2px #2fba1a;
+    margin-top: 4rem; }
+
+  .social-icons__item {
+    width: 2.75rem;
+    height: 2.75rem;
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 5rem;
+    background-size: 834px 300px;
+    background-image: url("../img/social.png");
+    margin: 1rem 3rem 1rem 0; }
+
+  .social-icons__item_facebook {
+    background-position: 40% 70%; }
+
+  .social-icons__item_twitter {
+    background-position: 60% 70%; }
+
+  .social-icons__item_skype {
+    background-position: 50% 70%; }
+
+  .social-icons__item_linked {
+    background-position: 70% 70%; }
+
+  .social-icons__item_github {
+    background-position: 80.2% 70%; }
+
+  .social-icons__item_google {
+    background-position: 30% 70%;
+    margin-right: 0; }
+
+  .contacts-container__social-header {
+    margin-top: 3rem; }
+
+  @keyframes star {
+    0% {
+      background: #000; }
+    100% {
+      display: block;
+      height: 3px;
+      width: 3px;
+      background: #fff; } }
+  @keyframes moon {
+    0% {
+      background-image: none; }
+    25% {
+      transform: translate(12rem, -6rem);
+      background-image: url("../img/phase1.png");
+      background-repeat: no-repeat;
+      background-size: 46.8px 102px; }
+    50% {
+      transform: translate(27rem, -12rem);
+      background-image: url("../img/phase2.png");
+      background-repeat: no-repeat;
+      background-size: 56.4px 103.2px; }
+    75% {
+      transform: translate(42rem, -18rem);
+      background-image: url("../img/phase3.png");
+      background-repeat: no-repeat;
+      background-size: 75.6px 105.6px; }
+    100% {
+      transform: translate(56.3rem, -23rem);
+      background-image: url("../img/phase4.png");
+      background-repeat: no-repeat;
+      background-size: 105.6px 106.8px; } } }
 
 /*# sourceMappingURL=style.css.map */
