--- a/css/style.css
+++ b/css/style.css
@@ -1102,7 +1102,14 @@ input, textarea {
     width: 25rem;
     height: 25rem;
     margin: auto;
-    box-shadow: 0.25rem 0.25rem 0.5rem 0.25rem #3fa13f; }
+    box-shadow: -31px 44px 82px -5px rgba(0, 0, 0, 0.65);
+    transition: all 2s ease; }
+
+  .pop-btn:hover, .pop-btn_2:hover, .pop-btn_3:hover, .pop-btn_4:hover, .pop-btn_5:hover, .pop-btn_6:hover {
+    animation-name: up;
+    animation-duration: 0.3s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards; }
 
   .pop-up__picture {
     width: 30%; }
@@ -1153,7 +1160,7 @@ input, textarea {
     background-position: -1% 97%;
     background-size: 450px 450px;
     margin-right: 8rem;
-    margin-top: 5rem; }
+    margin-top: 3rem; }
 
   .window-content__skill-item-name {
     margin-top: 8rem;
@@ -1164,10 +1171,15 @@ input, textarea {
 
   .window-content__upper {
     height: auto;
-    margin-bottom: 30rem; }
+    margin-bottom: 30rem;
+    padding-bottom: 3rem;
+    padding-top: 2rem;
+    box-sizing: border-box; }
 
   .window-content__bottom {
-    height: auto; }
+    height: auto;
+    padding-bottom: 3rem;
+    box-sizing: border-box; }
 
   .window-content__middle {
     height: auto; }
@@ -1201,7 +1213,7 @@ input, textarea {
     background-image: linear-gradient(to bottom, #47e339, #249612); }
 
   .contacts-container__top-header {
-    margin-top: 2rem; }
+    margin-top: 4rem; }
 
   input, textarea {
     outline: none; }
@@ -1235,6 +1247,10 @@ input, textarea {
   .contacts-container__social-header {
     margin-top: 3rem; }
 
+  .copyrights {
+    padding: 2rem 0;
+    font-size: 1rem; }
+
   @keyframes star {
     0% {
       background: #000; }
@@ -1243,6 +1259,9 @@ input, textarea {
       height: 3px;
       width: 3px;
       background: #fff; } }
+  @keyframes up {
+    100% {
+      transform: translateY(-0.5rem); } }
   @keyframes moon {
     0% {
       background-image: none; }
