--- a/css/style.css
+++ b/css/style.css
@@ -419,7 +419,8 @@ body {
   position: fixed;
   /*height: 100vh;*/
   width: 100%;
-  display: none; }
+  display: none;
+  z-index: 1; }
 
 .pop-check:checked ~ .pop-up {
   display: block; }
@@ -454,7 +455,7 @@ body {
   position: fixed;
   width: 70%;
   height: 85%;
-  z-index: 15;
+  z-index: 40;
   left: 0;
   right: 0;
   top: 0;
@@ -1103,16 +1104,31 @@ input, textarea {
     height: 25rem;
     margin: auto;
     box-shadow: 31px 44px 82px -5px rgba(0, 0, 0, 0.65);
-    transition: all 2s ease; }
+    filter: grayscale(1); }
 
   .pop-btn:hover, .pop-btn_2:hover, .pop-btn_3:hover, .pop-btn_4:hover, .pop-btn_5:hover, .pop-btn_6:hover {
     animation-name: up;
     animation-duration: 0.3s;
     animation-timing-function: linear;
-    animation-fill-mode: forwards; }
+    animation-fill-mode: forwards;
+    filter: grayscale(0); }
+
+  .pop-up__screen {
+    height: auto;
+    width: auto;
+    margin: 0;
+    position: fixed;
+    z-index: 40;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    text-align: center; }
 
   .pop-up__picture {
-    width: 30%; }
+    overflow: scroll;
+    width: auto;
+    height: 90vh; }
 
   .pop-up-container {
     display: inline-block;
@@ -1128,8 +1144,8 @@ input, textarea {
     width: 8rem;
     padding-top: 2rem;
     position: absolute;
-    right: 2%;
-    top: -30%;
+    right: 27%;
+    top: 3%;
     border: 3px solid #15ab24;
     box-shadow: inset 0px 0px 10px 5px #3fa13f; }
 
@@ -1215,6 +1231,13 @@ input, textarea {
   .contacts-container__top-header {
     margin-top: 4rem; }
 
+  .social-icons__item:hover {
+    animation-name: social;
+    animation-duration: 0.1s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    filter: grayscale(0); }
+
   input, textarea {
     outline: none; }
 
@@ -1262,6 +1285,9 @@ input, textarea {
   @keyframes up {
     100% {
       transform: translateY(-0.5rem); } }
+  @keyframes social {
+    100% {
+      transform: translateY(-0.2rem); } }
   @keyframes moon {
     0% {
       background-image: none; }
