--- a/sass/style.scss
+++ b/sass/style.scss
@@ -531,6 +531,7 @@ padding: 2rem 0 0 2rem;
 	/*height: 100vh;*/
 	width: 100%;
 	display: none;
+	z-index: 1;
 }
 
 .pop-check:checked ~ .pop-up {
@@ -569,7 +570,7 @@ padding: 2rem 0 0 2rem;
 	position: fixed;
 	width: 70%;
 	height: 85%;
-	z-index: 15;
+	z-index: 40;
 	left: 0;
 	right: 0;
 	top: 0;
@@ -1383,7 +1384,7 @@ input,textarea{
 	height: 25rem;
 	margin:auto;
 	box-shadow: 31px 44px 82px -5px rgba(0,0,0,0.65); 
-	transition: all 2s ease;
+	filter: grayscale(1);
 	}
 
 	.pop-btn:hover {
@@ -1391,10 +1392,28 @@ input,textarea{
 	animation-duration: 0.3s;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
+	filter: grayscale(0);
 	}
 
+
+
+	.pop-up__screen {
+	height: auto;
+	width: auto;
+	margin: 0;
+	position: fixed;
+	z-index: 40;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	text-align: center;
+}
+
 	.pop-up__picture {
-	width: 30%;
+	overflow: scroll;	
+	width: auto;
+	height: 90vh;
 	}
 
 	.pop-up-container {
@@ -1413,8 +1432,8 @@ input,textarea{
 		width: 8rem;
 		padding-top: 2rem;
 		position: absolute;
-		right:2%;
-		top: -30%;
+		right:27%;
+		top: 3%;
 		border:3px solid #15ab24;
 		box-shadow: inset 0px 0px 10px 5px rgba(63,161,63,1);
 	}
@@ -1518,6 +1537,14 @@ input,textarea{
 		margin-top: 4rem;
 	}
 
+	.social-icons__item:hover {
+		animation-name: social;
+		animation-duration: 0.1s;
+		animation-timing-function: linear;
+		animation-fill-mode: forwards;
+		filter: grayscale(0);
+	}
+
 	input, textarea {
         outline:none;
     }
@@ -1586,6 +1613,16 @@ input,textarea{
 			}
 		100% {
 			transform:translateY(-0.5rem);
+		}
+
+	}
+
+	@keyframes social {
+		0% {
+
+			}
+		100% {
+			transform:translateY(-0.2rem);
 		}
 
 	}
