--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@ body {
 
 /*---------------------------------------------------HEADER-------------------------------------------------------------*/
 $duration: 10s;
-
+$duration2: 16s;
 
 .container-fluid {
 	padding: 0;
@@ -1267,7 +1267,7 @@ input,textarea{
 	}
 
 	.moon {
-	animation-duration: $duration+6s;
+	animation-duration: $duration2;
 	transform-origin: 0 80%;
 	margin-top: 30rem;
 
@@ -1300,7 +1300,7 @@ input,textarea{
 	width: 6rem;
 	left: 56%;
 	top: 43%;
-
+	animation-delay: $duration2;
 	}
 
 	.star2 {
@@ -1308,11 +1308,13 @@ input,textarea{
 	width: 5rem;
 	left: 15%;
 	top: 18%;
+	animation-delay: $duration2+1.5s;
 	}
 
 	.star3 {
 	left: 75%;
 	top: 27%;
+	animation-delay: $duration2+2s;
 	}
 
 	.up-btn {
@@ -1328,6 +1330,118 @@ input,textarea{
 		z-index: 100;
 		opacity: 0.4;
 	}
+
+	.particle {
+	animation-delay: $duration2;
+}
+
+.particle:nth-of-type(3) {
+	animation-delay: $duration2+1s;
+}
+
+.particle:nth-of-type(4) {
+	animation-delay: $duration2+0.5s;
+}
+
+.particle:nth-of-type(5) {
+	animation-delay: $duration2+0.2s;
+}
+
+.particle:nth-of-type(6) {
+	animation-delay: $duration2+0.3s;
+}
+
+.particle:nth-of-type(7) {
+	animation-delay: $duration2+0.8s;
+}
+
+.particle:nth-of-type(8) {
+	animation-delay: $duration2+0.7s;
+}
+
+.particle:nth-of-type(9) {
+	animation-delay: $duration2+0.4s;
+}
+
+.particle:nth-of-type(10) {
+	animation-delay: $duration2+0.4s;
+}
+
+.particle:nth-of-type(11) {
+	animation-delay: $duration2+0.9s;
+}
+
+.particle:nth-of-type(12) {
+	animation-delay: $duration2+1.4s;
+}
+
+.particle:nth-of-type(13) {
+	animation-delay: $duration2+1.1s;
+}
+
+.particle:nth-of-type(14) {
+	animation-delay: $duration2+1.8s;
+}
+
+.particle:nth-of-type(15) {
+	animation-delay: $duration2+1.6s;
+}
+
+.particle:nth-of-type(16) {
+	animation-delay: $duration2+1.1s;
+}
+
+.particle:nth-of-type(17) {
+	animation-delay: $duration2+1.3s;
+}
+
+.particle:nth-of-type(18) {
+	animation-delay: $duration2+0.1s;
+}
+
+.particle:nth-of-type(19) {
+	animation-delay: $duration2+0.7s;
+}
+
+.particle:nth-of-type(20) {
+	animation-delay: $duration2+0.7s;
+}
+.particle:nth-of-type(21) {
+	animation-delay: $duration2+0.4s;
+}
+.particle:nth-of-type(22) {
+	animation-delay: $duration2+1.2s;
+}
+.particle:nth-of-type(23) {
+	animation-delay: $duration2+1.1s;
+}
+.particle:nth-of-type(24) {
+	animation-delay: $duration2+1.7s;
+}
+
+.particle:nth-of-type(25) {
+	animation-delay: $duration2+0.7s;
+}
+
+.particle:nth-of-type(26) {
+	animation-delay: $duration2+1.2s;
+}
+
+.particle:nth-of-type(27) {
+	animation-delay: $duration2+0.4s;
+}
+
+.particle:nth-of-type(28) {
+	animation-delay: $duration2+0.2s;
+}
+
+.particle:nth-of-type(29) {
+	animation-delay: $duration2+1.9s;
+}
+
+.particle:nth-of-type(30) {
+	animation-delay: $duration2+1.7s;
+}
 	/*-----------------------------------------------ABOUT-----------------------------------------------------*/
 
 	.about {
