--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,7 @@ body {
   margin: auto; }
 
 .about-button {
-  margin-top: -2rem;
+  margin-top: 3rem;
   width: 25rem;
   margin-right: -0.5rem; }
 
@@ -398,7 +398,8 @@ body {
   margin: auto;
   background-image: url("../img/puma.jpg");
   background-size: cover;
-  box-shadow: 0.5rem 0.5rem 1rem 0.5rem #3fa13f; }
+  /*box-shadow: 0.5rem 0.5rem 1rem 0.5rem #3fa13f;*/
+  box-shadow: 31px 44px 82px -5px rgba(0, 0, 0, 0.65); }
 
 .pop-btn_2 {
   background-image: url("../img/elena.jpg"); }
@@ -963,7 +964,7 @@ input, textarea {
       background-image: url("../img/phase4.png");
       background-repeat: no-repeat;
       background-size: 88px 89px; } } }
-@media screen and (min-width: 75rem) {
+@media screen and (min-width: 80rem) {
   /*--------------------------------------------HEADER-------------------------------------------------------*/
   .header {
     background-image: url("../img/header_back_big_screen.jpg"); }
@@ -1195,6 +1196,9 @@ input, textarea {
   .works {
     background-image: url("../img/road_big_screen.jpg"); }
 
+  .works-content {
+    text-align: center; }
+
   .works-content__header {
     display: block;
     width: 12rem;
@@ -1238,8 +1242,8 @@ input, textarea {
     margin-right: 10rem;
     margin-bottom: 8rem; }
 
-  .pop-up-container:first-of-type, .pop-up-container:nth-of-type(4) {
-    margin-left: 9rem; }
+  .pop-up-container:nth-of-type(3), .pop-up-container:nth-of-type(6) {
+    margin-right: 0rem; }
 
   .lbl-inside {
     border-radius: 50%;
@@ -1247,7 +1251,7 @@ input, textarea {
     width: 8rem;
     padding-top: 2rem;
     position: absolute;
-    right: 27%;
+    right: 20%;
     top: 3%;
     border: 3px solid #15ab24;
     box-shadow: inset 0px 0px 10px 5px #3fa13f; }
@@ -1414,5 +1418,14 @@ input, textarea {
       background-image: url("../img/phase4.png");
       background-repeat: no-repeat;
       background-size: 105.6px 106.8px; } } }
+@media screen and (max-width: 1545px) and (min-width: 1200px) {
+  .pop-up-container:nth-of-type(3), .pop-up-container:nth-of-type(6) {
+    margin-right: 10rem; }
+
+  .header-button, .about-button, .contact-form__submit {
+    margin-top: 5rem; }
+
+  .about-button {
+    margin-top: 4rem; } }
 
 /*# sourceMappingURL=style.css.map */
