--- a/sass/style.scss
+++ b/sass/style.scss
@@ -461,7 +461,7 @@ padding: 2rem 0 0 2rem;
 
 .about-button {
 	@extend .header-button;
-	margin-top: -2rem;
+	margin-top: 3rem;
 	width: 25rem;
 	margin-right: -0.5rem;
 }
@@ -498,7 +498,8 @@ padding: 2rem 0 0 2rem;
 	margin: auto;
 	background-image: url("../img/puma.jpg"); 
 	background-size: cover;
-	box-shadow: 0.5rem 0.5rem 1rem 0.5rem #3fa13f;
+	/*box-shadow: 0.5rem 0.5rem 1rem 0.5rem #3fa13f;*/
+	box-shadow: 31px 44px 82px -5px rgba(0,0,0,0.65); 
 }
 
 .pop-btn_2 {
@@ -1214,7 +1215,7 @@ input,textarea{
 	}
 }
 
-@media screen and (min-width: 75rem) {
+@media screen and (min-width: 80rem) {
 	/*--------------------------------------------HEADER-------------------------------------------------------*/
 	.header {
 	background-image: url("../img/header_back_big_screen.jpg");
@@ -1499,6 +1500,10 @@ input,textarea{
 	background-image: url("../img/road_big_screen.jpg");
 	}
 
+	.works-content {
+		text-align: center;
+	}
+
 	.works-content__header {
 	display: block;
 	width: 12rem;
@@ -1550,8 +1555,8 @@ input,textarea{
 		margin-bottom: 8rem;
 	}
 
-	.pop-up-container:first-of-type, .pop-up-container:nth-of-type(4) {
-		margin-left: 9rem;
+	.pop-up-container:nth-of-type(3), .pop-up-container:nth-of-type(6) {
+		margin-right: 0rem;
 	}
 
 	.lbl-inside {
@@ -1560,7 +1565,7 @@ input,textarea{
 		width: 8rem;
 		padding-top: 2rem;
 		position: absolute;
-		right:27%;
+		right:20%;
 		top: 3%;
 		border:3px solid #15ab24;
 		box-shadow: inset 0px 0px 10px 5px rgba(63,161,63,1);
@@ -1780,5 +1785,19 @@ input,textarea{
 		 background-image: url("../img/phase4.png");
 		 background-repeat: no-repeat;
 		 background-size: 105.6px 106.8px;}
+	}
+}
+
+@media screen and (max-width: 1545px) and (min-width:1200px) {
+	.pop-up-container:nth-of-type(3), .pop-up-container:nth-of-type(6) {
+		margin-right: 10rem;
+	}
+
+	.header-button {
+		margin-top: 5rem;
+	}
+
+	.about-button {
+		margin-top: 4rem;
 	}
 }
