--- a/css/style.css
+++ b/css/style.css
@@ -1418,7 +1418,7 @@ input, textarea {
       background-image: url("../img/phase4.png");
       background-repeat: no-repeat;
       background-size: 105.6px 106.8px; } } }
-@media screen and (max-width: 1545px) and (min-width: 1200px) {
+@media screen and (max-width: 1900px) and (min-width: 1200px) {
   .pop-up-container:nth-of-type(3), .pop-up-container:nth-of-type(6) {
     margin-right: 10rem; }
 
@@ -1426,6 +1426,25 @@ input, textarea {
     margin-top: 5rem; }
 
   .about-button {
-    margin-top: 4rem; } }
+    margin-top: 4rem; }
+
+  .contacts-container__align {
+    box-sizing: border-box;
+    padding-top: 8rem; } }
+@media screen and (min-height: 200px) and (max-height: 830px) {
+  /*	.contacts-container__top-header {
+  		margin-top: 15rem;
+  	}*/
+  .clever-words {
+    margin-top: 8rem; }
+
+  .about-content__header, .works-content__header, .window-content__header, .contacts-container__top-header {
+    margin-top: 1rem; }
+
+  .about-button {
+    margin-top: 1rem; }
+
+  .contacts-container__align {
+    margin-top: 20rem; } }
 
 /*# sourceMappingURL=style.css.map */
