--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1788,7 +1788,7 @@ input,textarea{
 	}
 }
 
-@media screen and (max-width: 1545px) and (min-width:1200px) {
+@media screen and (max-width: 1900px) and (min-width:1200px) {
 	.pop-up-container:nth-of-type(3), .pop-up-container:nth-of-type(6) {
 		margin-right: 10rem;
 	}
@@ -1799,5 +1799,33 @@ input,textarea{
 
 	.about-button {
 		margin-top: 4rem;
+	}
+
+	.contacts-container__align {
+		box-sizing: border-box;
+		padding-top: 8rem;
+	}
+}
+
+
+@media screen and (min-height:200px) and (max-height: 830px) {
+/*	.contacts-container__top-header {
+		margin-top: 15rem;
+	}*/
+
+	.clever-words {
+		margin-top: 8rem;
+	}
+
+	.about-content__header {
+	margin-top: 1rem;
+	}
+
+	.about-button {
+		margin-top: 1rem;
+	}
+
+	.contacts-container__align {
+		margin-top: 20rem;
 	}
 }
