--- a/sass/style.scss
+++ b/sass/style.scss
@@ -676,7 +676,7 @@ padding: 2rem 0 0 2rem;
 .window-content__skill-item-name {
 	margin-top: 17rem;
 	font-family: "Droid";
-	font-size: 3rem;
+	font-size: 2.5rem;
 	font-weight: bold;
 	text-transform: uppercase;
 }
@@ -968,7 +968,7 @@ input,textarea{
 	font-size: 3rem;
 	width: 12rem;
 	margin:  auto;
-	margin-top: 3rem;
+	top:1.5rem;
 	left: 12rem;
 	}
 
@@ -991,7 +991,7 @@ input,textarea{
 	}
 
 	.about-button {
-	margin-top: 1rem;
+	margin-top: 3rem;
 	margin-left: 25rem;
 	margin-right: 0rem;
 	padding-top: 0.5rem;
@@ -1013,10 +1013,10 @@ input,textarea{
 
 
 	.pop-btn {
-	width: 60%;
+	width: 40%;
 	height: 70vh;
 	margin-bottom: -8rem;
-	box-shadow: 0.25rem 0.25rem 0.5rem 0.25rem #3fa13f;
+	box-shadow: 31px 44px 82px -5px rgba(0,0,0,0.65); 
 	}
 
 	.pop-up__picture {
@@ -1215,7 +1215,7 @@ input,textarea{
 	}
 }
 
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 81rem) {
 	/*--------------------------------------------HEADER-------------------------------------------------------*/
 	.header {
 	background-image: url("../img/header_back_big_screen.jpg");
@@ -1452,14 +1452,14 @@ input,textarea{
 	.about-content__foto {
 	height: 12rem;
 	width: 12rem;
-	margin-top: 3rem;
+	margin-top: 5rem;
 	}
 
 	.about-content__header {
 	font-size: 3rem;
 	width: 12rem;
 	margin:  auto;
-	margin-top: 6rem;
+	margin-top: 3rem;
 	left: 10rem;
 	}
 
@@ -1788,6 +1788,7 @@ input,textarea{
 	}
 }
 
+
 @media screen and (max-width: 1900px) and (min-width:1200px) {
 	.pop-up-container:nth-of-type(3), .pop-up-container:nth-of-type(6) {
 		margin-right: 10rem;
@@ -1809,9 +1810,9 @@ input,textarea{
 
 
 @media screen and (min-height:200px) and (max-height: 830px) {
-/*	.contacts-container__top-header {
+	.contacts-container__top-header {
 		margin-top: 15rem;
-	}*/
+	}
 
 	.clever-words {
 		margin-top: 8rem;
